# ghosted

./: .gitignore  CONTRIBUTING.md  FEASIBILITY_REPORT.md  LICENSE  README.md  pyproject.toml
brokers/: acxiom.yaml  addresses_com.yaml  beenverified.yaml  cocofinder.yaml  cyberbackgroundchecks.yaml  fastpeoplesearch.yaml  mylife.yaml  nuwber.yaml  peopleconnect.yaml  peoplefinder.yaml  peoplelooker.yaml  publicrecordsnow.yaml  radaris.yaml  searchpeoplefree.yaml  spokeo.yaml  thatsthem.yaml  truepeoplesearch.yaml  usphonebook.yaml  veripages.yaml  whitepages.yaml
brokers/schemas/: broker.schema.yaml
ghosted/: __init__.py  cli.py  models.py
ghosted/brokers/: __init__.py  base.py  engine.py  registry.py
ghosted/core/: __init__.py  emailer.py  history.py  remover.py  scanner.py
ghosted/legal/: __init__.py  generator.py
ghosted/legal/templates/: ccpa_deletion.txt  gdpr_erasure.txt  generic_removal.txt
ghosted/utils/: __init__.py  captcha.py  reporting.py
ghosted/vault/: __init__.py  crypto.py  store.py
tests/: test_e2e.py
