[project]
name = "ghosted"
version = "0.1.0"
description = "Open-source personal data removal tool. Scan, remove, and monitor your personal data across data brokers."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "playwright>=1.40.0",
    "playwright-stealth>=2.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "cryptography>=41.0.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
ghosted = "ghosted.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
